--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,20 @@ julia:
   - 1.2
   - 1
   - nightly
-matrix:
+jobs:
+  fast_finish: true
   allow_failures:
     - julia: nightly
-  fast_finish: true
+  include:
+    - stage: Documentation
+      julia: 1
+      script: |
+        julia --project=docs -e '
+          using Pkg
+          Pkg.develop(PackageSpec(path=pwd()))
+          Pkg.instantiate()
+          include("docs/make.jl")'
+      after_success: skip
 notifications:
   email: false
 after_success:
